/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a commented-out sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/3.4.1/userguide/tutorial_java_projects.html
 */

// Apply the java plugin to add support for Java
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'
apply plugin: 'com.bmuschko.docker-java-application'

buildscript {
    repositories { gradlePluginPortal() }
    dependencies {
        classpath 'com.bmuschko:gradle-docker-plugin:6.7.0'
    }
}
// Create a fat-jar
jar {
    manifest {
        attributes "Main-Class": "pl.edu.agh.csg.Main"
    }

//    from {
//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
//    }
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    mavenLocal()
    jcenter()
}

sourceCompatibility = 17
targetCompatibility = 17

// In this section you declare the dependencies for your production and test code
dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha5'
    //implementation 'org.cloudsimplus:cloudsim-plus:7.1.2'
    implementation group: 'net.sf.py4j', name: 'py4j', version: '0.10.9.1'
    implementation group: "ch.qos.logback", name: "logback-classic", version: "1.2.3"
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
    implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.apache.commons:commons-compress:1.19'
    implementation 'commons-net:commons-net:3.6'
    implementation 'commons-io:commons-io:2.6'
    implementation 'org.apache.commons:commons-exec:1.3'
    implementation 'commons-codec:commons-codec:1.13'
    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
    implementation 'commons-validator:commons-validator:1.6'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
}

docker {
    url = 'unix:///var/run/docker.sock'
    javaApplication {
        baseImage = 'openjdk:17-jdk-slim-buster'
        maintainer = ''
        ports = [25333]
        images = ['vlba/cloudsimplus-gateway:1.8.0']
        jvmArgs = ['-Xms1G', '-Xmx30G']
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'utf-8'
}

dockerCreateDockerfile {
    environmentVariable 'JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
}

mainClassName = "pl.edu.agh.csg.Main"
